Fix the Signing Path

--- a/src/Interfaces/Interfaces.csproj
+++ b/src/Interfaces/Interfaces.csproj
@@ -34,7 +34,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>BigDrive.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\BigDrive.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
