--- a/src/ConfigProvider/ConfigProvider.csproj
+++ b/src/ConfigProvider/ConfigProvider.csproj
@@ -34,7 +34,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>BigDrive.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\BigDrive.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=9.0.0.4, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
