--- a/test/unit/BigDrive.Client.Test/BigDrive.Client.Test.vcxproj
+++ b/test/unit/BigDrive.Client.Test/BigDrive.Client.Test.vcxproj
@@ -157,6 +157,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ConfigurationTests.cpp" />
+    <ClCompile Include="GuidUtilTests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
