--- a/src/IShellFolder/IShellFolder.vcxproj
+++ b/src/IShellFolder/IShellFolder.vcxproj
@@ -158,7 +158,9 @@
     <ClInclude Include="RegistrationManager.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Shared\EventLogger.cpp" />
+    <ClCompile Include="..\Shared\EventLogger.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="LaunchDebugger.cpp" />
     <ClCompile Include="pch.cpp">
