--- a/src/BigDrive.Client/BigDrive.Client.vcxproj
+++ b/src/BigDrive.Client/BigDrive.Client.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="GuidUtil.h" />
     <ClInclude Include="Interfaces\IBigDriveConfiguration.h" />
+    <ClInclude Include="Interfaces\IBigDriveRoot.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
