--- a/src/ConfigProvider/BigDrive.ConfigProvider.csproj
+++ b/src/ConfigProvider/BigDrive.ConfigProvider.csproj
@@ -78,10 +78,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigurationProvider.cs" />
+    <Compile Include="DriveManager.cs" />
     <Compile Include="Extensions\DriveConfigurationExtensions.cs" />
     <Compile Include="Model\DriveConfiguration.cs" />
+    <Compile Include="Model\ProviderConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProviderManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
