--- a/src/BigDrive.Client/BigDrive.Client.vcxproj
+++ b/src/BigDrive.Client/BigDrive.Client.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="COMAdminCatalog.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentCollection.h" />
+    <ClInclude Include="COMUtil.h" />
     <ClInclude Include="Dispatch.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="DriveConfiguration.h" />
@@ -183,6 +184,7 @@
     <ClInclude Include="GuidUtil.h" />
     <ClInclude Include="Interfaces\IBigDriveConfiguration.h" />
     <ClInclude Include="Interfaces\IBigDriveRoot.h" />
+    <ClInclude Include="Interfaces\ICatalogObject.h" />
     <ClInclude Include="Interfaces\ICatalogCollection.h" />
     <ClInclude Include="Interfaces\ICOMAdminCatalog.h" />
     <ClInclude Include="Interfaces\ICOMAdminCatalog2.h" />
