--- a/test/unit/BigDrive.Client.Test/BigDrive.Client.Test.vcxproj
+++ b/test/unit/BigDrive.Client.Test/BigDrive.Client.Test.vcxproj
@@ -194,6 +194,7 @@
     <ClCompile Include="BigDriveClientConfigurationManagerTests.cpp" />
     <ClCompile Include="COMAdminCatalogTests.cpp" />
     <ClCompile Include="ComponentCollectionTests.cpp" />
+    <ClCompile Include="ComponentTests.cpp" />
     <ClCompile Include="DriveConfigurationTests.cpp" />
     <ClCompile Include="GuidUtilTests.cpp" />
     <ClCompile Include="MockDispatch.cpp" />
