--- a/src/BigDrive.Provider.Sample/BigDrive.Provider.Sample.csproj
+++ b/src/BigDrive.Provider.Sample/BigDrive.Provider.Sample.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BigDrive.Provider.Sample.TraceSource.cs" />
     <Compile Include="Provider-IBigDriveRegistration.cs" />
     <Compile Include="Provider.IBigDriveRoot.cs" />
     <Compile Include="Provider.cs" />
