--- a/test/unit/BigDrive.ShellFolder.Test/BigDrive.ShellFolder.Test.vcxproj
+++ b/test/unit/BigDrive.ShellFolder.Test/BigDrive.ShellFolder.Test.vcxproj
@@ -166,6 +166,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="RegistrationManagerTests.cpp" />
+    <ClCompile Include="ShItemIdUtilTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
