--- a/test/unit/BigDrive.ShellFolder.Test/BigDrive.ShellFolder.Test.vcxproj
+++ b/test/unit/BigDrive.ShellFolder.Test/BigDrive.ShellFolder.Test.vcxproj
@@ -158,7 +158,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DllMainTests.cpp" />
-    <ClCompile Include="ItemIdListTests.cpp" />
+    <ClCompile Include="ILExtensions.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
