--- a/src/IShellFolder/IShellFolder.vcxproj
+++ b/src/IShellFolder/IShellFolder.vcxproj
@@ -159,12 +159,12 @@
     <ClInclude Include="BigDriveShellFolder.h" />
     <ClInclude Include="dllmain.h" />
     <ClInclude Include="EmptyEnumIDList.h" />
+    <ClInclude Include="RegistrationManagerExports.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="ILExtensions.h" />
     <ClInclude Include="LaunchDebugger.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RegistrationManager.h" />
-    <ClInclude Include="ShItemIdUtil.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Shared\EventLogger.cpp">
@@ -185,7 +185,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="RegistrationManager.cpp" />
-    <ClCompile Include="ShItemIdUtil.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BigDrive.Client\BigDrive.Client.vcxproj">
